# cmake-project-template

./: README.md
test/: CMakeLists.txt  main.cpp
test/src/: test_divider_c.cpp  test_divider_cxx.cpp
